# evm-tests

./: .env  README.md  checks.js  funding-results.json  package-lock.json  package.json  wallets.json
mains/: funder.js  hard1.js  hard2.js  hard3.js  hard4.js  hard5.js  hard6.js  shit.js
stress/: Cargo.toml  wallet.json  wallets.json
stress/src/: main.rs  test.rs
stress/src/models/: mod.rs  test_results.rs  wallet.rs
stress/src/utils/: crypto.rs  mod.rs  rpc_client.rs
tests/: evm.test.js  protocol.test.js
utils/: generateWallets.js  index.js  sendTxs.js
